# 2026-urc-manipulation-

./: .gitignore
src/: tree.txt
src/arm_v3/: CMakeLists.txt  package.xml
src/arm_v3/launch/: display.launch  gazebo.launch
src/arm_v3/meshes/: link0.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL  link8.STL
src/arm_v3/urdf/: arm_v3.csv  arm_v3.urdf
src/arm_v3_config/: .setup_assistant  CMakeLists.txt  package.xml
src/arm_v3_config/config/: arm_v3.ros2_control.xacro  arm_v3.srdf  arm_v3.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_cpp.yaml  ompl_planning.yaml  ros2_controllers.yaml  servo_fake.yaml  zero_servo.yaml
src/arm_v3_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo_example.launch.py  servo_fake.launch.py  servo_pos_vel.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/hello_moveit/: package.xml
src/hello_moveit/src/: hello_moveit.cpp
src/mtc_tutorial/: CMakeLists.txt  package.xml
src/mtc_tutorial/launch/: pick_place_demo.launch.py
src/mtc_tutorial/src/: mtc_node.cpp
src/rmd_control/: package.xml  setup.cfg  setup.py
src/rmd_control/rmd_control/: can_interface.py  execute.py  kinematics_angle.py  kinematics_vel.py  rmd_driver_4_01.py  rmd_driver_4_3.py  rmd_node.py  rmd_node_vel.py  test.py  test_2.py
src/servo_can_bridge/: package.xml  setup.cfg  setup.py
src/servo_can_bridge/launch/: servo_can_bridge.launch.py
src/servo_can_bridge/servo_can_bridge/: can_iface.py  constant.py  od_build.py  pdosdo.py  servo_can_bridge copy.py  servo_can_bridge.py  x_theta.py
src/spawn/: CMakeLists.txt  package.xml
src/spawn/meshes/: gripper_case.STL
src/spawn/src/: spawner.cpp
src/typing_control/: package.xml  setup.cfg  setup.py
src/typing_control/launch/: plan.launch.py  planning.launch.py
src/typing_control/typing_control/: plan_execute.py  planning.py
src/zero_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
src/zero_arm_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  zero_arm.srdf  zero_arm.urdf.xacro  zero_servo.yaml  zero_servo_copy.yaml
src/zero_arm_config/launch/: demo.launch.py  fake_real.launch.py  move_group.launch.py  moveit_rviz.launch.py  only_servo.launch.py  rsp.launch.py  servo_example.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/zero_arm_urdf/: CMakeLists.txt  package.xml
src/zero_arm_urdf/config/: joint_names_zero_arm_urdf.yaml
src/zero_arm_urdf/launch/: display.launch  gazebo.launch
src/zero_arm_urdf/meshes/: base_link.STL  left_finger.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  right_finger.STL  solenoid.STL
src/zero_arm_urdf/urdf/: zero_arm_urdf.csv  zero_arm_urdf.urdf
src/zero_config/: .setup_assistant  CMakeLists.txt  package.xml
src/zero_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  zero_arm_urdf.ros2_control.xacro  zero_arm_urdf.srdf  zero_arm_urdf.urdf.xacro  zero_servo.yaml  zero_servo_copy.yaml
src/zero_config/launch/: demo.launch.py  fake_real.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo_example.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/zero_servo_control/: CMakeLists.txt  package.xml
src/zero_servo_control/src/: JoytoServo.cpp  keyboard_teleop.cpp
